# mindmap

./: .gitignore  Cargo.toml  config.toml  flake.nix
.config/flakebox/: id
.github/workflows/: flakebox-ci.yml
src/: configuration.rs  db.rs  lib.rs  llm.rs  main.rs
src/db/: mod.rs
src/model/: mod.rs
src/system-tray/: main.rs
