[package]
name = "mindmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"]}
clap = { version = "4.5.8", features = ["derive"] }
clap_complete = "4.5.7"
config = "0.14.0"
dirs = "5.0.1"
dotenv = "0.15.0"
inquire = { version = "0.7.5", features = ["date"] }
once_cell = "1.19.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
postgres-types = "0.2.6"
bytes = "1.6.0"
serde = "1.0.203"

[profile.dev]
debug = "line-tables-only"
lto = "off"

[profile.ci]
inherits = "dev"
incremental = false

[profile.release]
debug = "line-tables-only"
lto = "fat"
codegen-units = 1

# Workaround: https://github.com/rust-lang/cargo/issues/12457 which causes
#             https://github.com/ipetkov/crane/issues/370
[profile.dev.build-override]
debug = false
[profile.ci.build-override]
debug = false
[profile.release.build-override]
debug = false
